// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#toJSON converts XDR to JSON 1`] = `
Object {
  "authorize": true,
  "color": "green",
  "fee": 100,
  "lat": 37.7645352,
  "lon": -122.421069,
  "memo": Object {
    "_type": "memoText",
    "text": "hola",
  },
  "meta": Object {
    "_type": "paid",
    "price": Object {
      "d": 1,
      "n": 2,
    },
  },
  "msg": "hello world",
  "offerId": "12345",
  "opaque": "AAAB",
  "price": Object {
    "d": 1,
    "n": 2,
  },
  "signedSequence": "-1059",
  "skipList": Array [
    "AAA=",
    "AAE=",
  ],
  "theVoid": undefined,
  "varOpaque": "AAE=",
  "varSkipList": Array [
    "AAA=",
    "AAE=",
    "AQE=",
  ],
  "version": -1,
}
`;

exports[`#toJSON option with value 1`] = `
Object {
  "meta": Object {
    "_type": "rejected",
    "rejected": 2,
  },
}
`;

exports[`#toJSON option without value 1`] = `
Object {
  "ext": Object {
    "_type": 0,
  },
}
`;

exports[`#toJSON union default arm 1`] = `
Object {
  "meta": Object {
    "_type": "pending",
  },
}
`;

exports[`#toJSON union with int discriminant and int arm 1`] = `
Object {
  "ext": Object {
    "_type": 0,
  },
}
`;

exports[`#toJSON union with struct arm 1`] = `
Object {
  "meta": Object {
    "_type": "paid",
    "price": Object {
      "d": 1,
      "n": 2,
    },
  },
}
`;

exports[`#toXDR regression: LedgerEntryChanges 1`] = `
Array [
  Object {
    "_type": "ledgerEntryState",
    "state": Object {
      "data": Object {
        "_type": "account",
        "account": Object {
          "accountId": Object {
            "_type": "publicKeyTypeEd25519",
            "ed25519": "ZUrFvSavD4V0AqwO0pCP2nBFoPHyoKEYtFLKPJbdmDs=",
          },
          "balance": "29684846895",
          "ext": Object {
            "_type": 1,
            "v1": Object {
              "ext": Object {
                "_type": 0,
              },
              "liabilities": Object {
                "buying": "236580880832",
                "selling": "29184848488",
              },
            },
          },
          "flags": 0,
          "homeDomain": "",
          "inflationDest": Object {
            "_type": "publicKeyTypeEd25519",
            "ed25519": "hD8BLsZFQEF33rKS6YopQUT3b6iLBG4nspe68/DBNBY=",
          },
          "numSubEntries": 9,
          "seqNum": "70985857964185117",
          "signers": Array [],
          "thresholds": "AQAAAA==",
        },
      },
      "ext": Object {
        "_type": 0,
      },
      "lastModifiedLedgerSeq": 23416963,
    },
  },
  Object {
    "_type": "ledgerEntryUpdated",
    "updated": Object {
      "data": Object {
        "_type": "account",
        "account": Object {
          "accountId": Object {
            "_type": "publicKeyTypeEd25519",
            "ed25519": "ZUrFvSavD4V0AqwO0pCP2nBFoPHyoKEYtFLKPJbdmDs=",
          },
          "balance": "29684845295",
          "ext": Object {
            "_type": 1,
            "v1": Object {
              "ext": Object {
                "_type": 0,
              },
              "liabilities": Object {
                "buying": "236580880832",
                "selling": "29184848488",
              },
            },
          },
          "flags": 0,
          "homeDomain": "",
          "inflationDest": Object {
            "_type": "publicKeyTypeEd25519",
            "ed25519": "hD8BLsZFQEF33rKS6YopQUT3b6iLBG4nspe68/DBNBY=",
          },
          "numSubEntries": 9,
          "seqNum": "70985857964185117",
          "signers": Array [],
          "thresholds": "AQAAAA==",
        },
      },
      "ext": Object {
        "_type": 0,
      },
      "lastModifiedLedgerSeq": 23416971,
    },
  },
]
`;

exports[`#toXDR regression: SetOptionsOp sample 1`] = `
Object {
  "clearFlags": undefined,
  "highThreshold": undefined,
  "homeDomain": undefined,
  "inflationDest": Object {
    "_type": "publicKeyTypeEd25519",
    "ed25519": "H6Ue1GOPj6Hb/ROPyIFCJpQPMujihEIvJSfK0UfMDIg=",
  },
  "lowThreshold": undefined,
  "masterWeight": undefined,
  "medThreshold": undefined,
  "setFlags": undefined,
  "signer": undefined,
}
`;
